# ssdlc-proto-02

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 316aaedb8536_initial.py  32136aecfaf9_.py  323a9dc024f6_initial.py  3622d2178970_.py  54c386210c46_.py  748538322500_initial.py  7b1bbd28fec7_.py  916853ccb09a_.py  9a3a7d6645ef_initial.py  cf4fa3651f5c_initial.py  ea43b7f57534_initial.py  fbabbf594c20_initial.py
api/: customer.py  product.py
app/: Dockerfile  main.py  requirements.txt  settings.py
app/api/: auth.py  customer.py  customers.py  product.py  products.py  users.py
app/db_config/: sqlalchemy_async_connect.py
app/infra/: depends.py  exceptions.py  hashservice.py  jwt_bearer.py  loginfra.py
app/models/data/: customer.py  db.py  mixins.py  product.py  user.py
app/models/schemas/: schema.py
app/repository/: customer.py  product.py  user.py
app/services/: customer.py  product.py  security.py  user.py
configs/: config.yml
db_config/: sqlalchemy_async_connect.py
domain/: model.py
infra/: depends.py
migrations/: env.py
models/data/: customer.py  customer_product.py  db.py  product.py
models/requests/: customer.py  customerreq.py
models/schemas/: schema.py
repository/: customer.py  product.py
services/: customer.py  product.py  unit_of_work.py
test/: conftest.py  test_customer.py  test_customer_svc.py  test_user.py  test_user_api.py
